--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="theme-color" content="#FFFFFF" />
     <title>Bible Study App</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: '#1c1917', // stone-900
+              muted: '#78716c', // stone-500
+            }
+          }
+        }
+      }
+    </script>
     <style>
       /* Custom scrollbar hiding for clean UI */
       .no-scrollbar::-webkit-scrollbar {
@@ -33,7 +45,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-stone-100 text-stone-900 overflow-hidden select-none">
+  <body class="bg-stone-100 text-primary overflow-hidden select-none">
     <div id="root" class="h-full w-full"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
